testdata/annotator/Globals.lks
function foo() {
    global <error descr="Global variables are not allowed inside function">coin</error> = "meuh";
}
